[package]
name = "tmc4671-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
nom = "7.1.3"
thiserror = "1.0.61"

[dev-dependencies]
embedded-hal-bus = "0.2.0"
linux-embedded-hal = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"